again... changing CSS to prevent text overflow.

--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 .p {
     white-space: normal;
     overflow: scroll;
+    font-size: 4vw;
 }
